objects/amc__Role_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>amc__Billable_Hourly_Rate__c</fullName>
        <inlineHelpText>Identifes the Billable Hourly Rate used for this Role Forecast</inlineHelpText>
        <label>Billable Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Billable_Hours__c</fullName>
        <inlineHelpText>Identifies the number of Billable Hours requested for this Role Forecast. Used to determine &apos;Hours Forecast - Billable&apos;</inlineHelpText>
        <label>Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Billable_Percentage__c</fullName>
        <inlineHelpText>Identifies the percentage of Billable Hours requested for this Role Forecast. Used to determine &apos;Hours Forecast - Billable&apos;</inlineHelpText>
        <label>Billable Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Hourly_Rate__c</fullName>
        <inlineHelpText>Identifies the Cost Hourly Rate used for this Role Forecast</inlineHelpText>
        <label>Cost Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <inlineHelpText>Identifies the Forecasted End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Forecast_Duration__c</fullName>
        <formula>amc__End_Date__c -  amc__Start_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days elapsed between the Start and End Date (inclusive)</inlineHelpText>
        <label>Forecast Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Forecast_GM__c</fullName>
        <formula>amc__Forecast_P_L__c  /  amc__Hours_Forecast_Value_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the Forecast GM% based on &apos;Forecast P&amp;L&apos; / &apos;Hours Forecast Value (Billable)&apos;</inlineHelpText>
        <label>Forecast GM%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Forecast_P_L__c</fullName>
        <formula>amc__Hours_Forecast_Value_Billable__c  -  amc__Hours_Forecast_Value_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the Forecast P&amp;L based on &apos;Hours Forecast Value (Billable)&apos; - &apos;Hours Forecast Value (Cost)&apos;</inlineHelpText>
        <label>Forecast P&amp;L</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Forecast_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Billable Hours assigned to this Role on this Role Forecast</inlineHelpText>
        <label>Hours Forecast - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Forecast_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of Non Billable Hours assigned to this Role on this Role Forecast</inlineHelpText>
        <label>Hours Forecast - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Forecast_Value_Billable__c</fullName>
        <formula>amc__Hours_Forecast_Billable__c  *  amc__Billable_Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the Hours Forecast Value (Billable) based on &apos;Hours Forecast - Billable&apos; x &apos;Billable Hourly Rate&apos;</inlineHelpText>
        <label>Hours Forecast Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Forecast_Value_Cost__c</fullName>
        <formula>amc__Total_Hours_Forecast__c  *  amc__Cost_Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the Hours Forecast Value (Cost) based on &apos;Total Hours Forecast&apos; x &apos;Cost Hourly Rate&apos;</inlineHelpText>
        <label>Hours Forecast Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Manual_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, denotes child Role Allocation Records are manually allocated.</description>
        <label>Manual Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable_Hours__c</fullName>
        <inlineHelpText>Identifies the number of Non Billable Hours requested for this Role Forecast. Used to determine &apos;Hours Forecast - Non Billable&apos;</inlineHelpText>
        <label>Non Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable_Percentage__c</fullName>
        <inlineHelpText>Identifies the percentage of Non Billable Hours requested for this Role Forecast. Used to determine &apos;Hours Forecast - Non Billable&apos;</inlineHelpText>
        <label>Non Billable Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Opportunity record this Role Forecast relates to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Role Forecasts</relationshipLabel>
        <relationshipName>Role_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Project record this Role Forecast record relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Role Forecasts</relationshipLabel>
        <relationshipName>Role_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Role record this Role Forecast relates to</inlineHelpText>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Role Forecasts</relationshipLabel>
        <relationshipName>Role_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Skill record this Role Forecast relates to</inlineHelpText>
        <label>Skill</label>
        <referenceTo>amc__Skill__c</referenceTo>
        <relationshipLabel>Role Forecasts</relationshipLabel>
        <relationshipName>Role_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <inlineHelpText>Identifies the Forecasted Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Forecast__c</fullName>
        <formula>amc__Hours_Forecast_Billable__c  +  amc__Hours_Forecast_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the Total Hours Forecast based on &apos;Hours Forecast - Billable&apos; + &apos;Hours Forecast - Non Billable&apos;</inlineHelpText>
        <label>Total Hours Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Working_Days__c</fullName>
        <inlineHelpText>Identifies the number of Working Days expected as part of this Role Forecast</inlineHelpText>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Role Forecast</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RFID:{000000}</displayFormat>
        <label>Forecast ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__End_Date_Validation</fullName>
        <active>true</active>
        <description>Ensures the End Date is not set before the Start Date</description>
        <errorConditionFormula>amc__Start_Date__c  &gt;  amc__End_Date__c</errorConditionFormula>
        <errorMessage>The End Date must be greater or equal to the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Working_Days_Greater_Than_Zero</fullName>
        <active>true</active>
        <description>Ensures the Working Days field is greater than 0</description>
        <errorConditionFormula>or(ISNULL(amc__Working_Days__c), amc__Working_Days__c  &lt;= 0)</errorConditionFormula>
        <errorMessage>The Working Days must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>